    - Loader optimizations.
    - NodeBase bufferInterval and bufferSize handlers will try to locate source which supports buffering in case there a multiple sources.
    - Removed unused typeId() concept.
    - SensorManager::addSensor() now gracefully handles if object registration to dbus fails.
    - SocketHandler::socketReadable now gracefully handles if client writes sessionId incorrectly.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Mon, 07 Mar 2011 16:17:54 +0200

sensord (0.6.40) unstable; urgency=low

  [Antti Virtanen]
  * SensorManager::releaseSensor() now removes bufferSize and bufferInterval settings for session from the node.
  * Qt-api interface classes now directly access methods from dbus adaptor instead of using properties. Fixes: NB#181522.
  * Refactored sensor interface and adaptor classes.
  * AbstractSensorChannelInterface does not anymore inherit from QDBusAbstractInterface.

  [Shenghua Liu]
  * Code cleanup 

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Fri, 04 Mar 2011 14:27:18 +0200

sensord (0.6.39) unstable; urgency=low

  [Pia Niemela]
  * Added setDataRangeIndex utility for easier range swapping
  * Fixed MOBILITY-2535
  * Fixed NB#223439

  [Lihan Guo]
  * Fixed coverity defects.
  * Improved sensorfw examples
  * Renamed DbusEmitter to DataEmitter and DbusEmitter::emitToDbus to DataEmitter::emitData.
  * Added test application to create multiple sensors.

  [Timo Rongas]
  * Prevent reading values from empty list in SysfsAdaptor
  * Added nodocs parameter to prevent doc building. Fixes: NB#227047
  * Chaged Screen.TopEdge default state from "top" to "left"

  [Antti Virtanen]
  * Fixed bug from SysfsAdaptor::writeToFile(): it used wrong method to get size of the buffer.
  * Removed FilterProperty: it had possible memory leak and could return references to already deleted memory.
  * AccelerometerChain transformation matrix is now instance specific.
  * Changed buffersizes to 1.