@@ -41,7 +41,8 @@ SessionData::SessionData(QLocalSocket* socket, QObject* parent) : QObject(parent
                                                                   size(0),
                                                                   count(0),
                                                                   bufferSize(1),
-                                                                  bufferInterval(0)
+                                                                  bufferInterval(0),
+                                                                  downsampling(true)
 {
     lastWrite.tv_sec = 0;
     lastWrite.tv_usec = 0;
@@ -103,9 +104,9 @@ bool SessionData::write(const void* source, int size)
     if(bufferSize <= 1)
     {
         memcpy(buffer + sizeof(unsigned int), source, size);
-        if(since >= interval)
+        if(downsampling && since >= interval)
         {
-            sensordLogT() << "[SocketHandler]: writing, since > interval";
+            sensordLogT() << "[SocketHandler]: writing, since > interval or downsampling disabled";
             gettimeofday(&lastWrite, 0);
             return write(buffer, size, 1);
         }
@@ -197,6 +198,21 @@ void SessionData::setBufferSize(unsigned int size)
 unsigned int SessionData::getBufferSize() const
 {
     return bufferSize;
+}
+
+void SessionData::setDownsampling(bool value)
+{
+    if(value != downsampling)
+    {
+        downsampling = value;
+        if(timer.isActive())
+            timer.stop();
+    }
+}
+
+bool SessionData::getDownsampling() const
+{
+    return downsampling;
 }
 
 SocketHandler::SocketHandler(QObject* parent) : QObject(parent), m_server(NULL)
@@ -393,4 +409,19 @@ unsigned int SocketHandler::bufferInterval(int sessionId) const
     if (it != m_idMap.end())
         return (*it)->getBufferInterval();
     return 0;
+}
+
+bool SocketHandler::downsampling(int sessionId) const
+{
+    QMap<int, SessionData*>::const_iterator it = m_idMap.find(sessionId);
+    if (it != m_idMap.end())
+        return (*it)->getBufferSize();
+    return 0;
+}
+
+void SocketHandler::setDownsampling(int sessionId, bool value)
+{
+    QMap<int, SessionData*>::iterator it = m_idMap.find(sessionId);
+    if (it != m_idMap.end())
+        (*it)->setBufferInterval(value);
 }
